changed sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
     # Información del proyecto
-    sonar.projectKey=co.com.ceiba.Ceiba_ADN:CeibaADN.daniel.benjumea
-    sonar.projectName=Ceiba_ADN-daniel.benjumea
+    sonar.projectKey=co.com.ceiba.Ceiba-ADN:ADN.daniel.benjumea
+    sonar.projectName=Ceiba-ADN(daniel.benjumea)
 
     #Datos de los fuentes y binarios
     sonar.sources=src/main/java
