project key sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
     # Información del proyecto
-    sonar.projectKey=co.com.ceiba.Ceiba-ADN:ADN.daniel.benjumea
+    sonar.projectKey=co.com.ceiba.adn
     sonar.projectName=Ceiba-ADN(daniel.benjumea)
 
     #Datos de los fuentes y binarios
